<resources>
    <string name="app_name">Calculadora</string>
    <string name="btnAC_Text">AC</string>
    <string name="btn0_Text">0</string>
    <string name="btn1_Text">1</string>
    <string name="btn4_Text">4</string>
    <string name="btn7_Text">7</string>
    <string name="btnSign_Text">+/-</string>
    <string name="btnPercent_Text">%</string>
    <string name="btnDiv_Text">/</string>
    <string name="btn8_Text">8</string>
    <string name="btnProd_Text">*</string>
    <string name="btn9_Text">9</string>
    <string name="btnDot_Text">.</string>
    <string name="btnResult_Text">=</string>
    <string name="btnAdd_Text">+</string>
    <string name="btn3_Text">3</string>
    <string name="btn2_Text">2</string>
    <string name="btnDiff_Text">-</string>
    <string name="btn6_Text">6</string>
    <string name="btn5_Text">5</string>
    <string name="txtInput_Text">0</string>
    <string name="btnLeftParenthesis_Text">(</string>
    <string name="btnRightParenthesis_Text">)</string>
    <string name="btnMemClear_Text">mc</string>
    <string name="btnMemAdd_Text">m+</string>
    <string name="btnMemDiff_Text">m-</string>
    <string name="btnMemRecall_Text">mr</string>
    <string name="btnPi_Text">&#960;</string>
    <string name="btnShift_Text">2&#8319;&#7496;</string>
    <string name="btnPwd2_Text">x&#178;</string>
    <string name="btnPwd3_Text" >x&#179;</string>
    <string name="btnEulerX_Text" >&#8455;&#7521;</string>
    <string name="btn10X_Text" >10&#7521;</string>
    <string name="btnRad_Text" >Rad</string>
    <string name="btnSinH_Text" >sinh</string>
    <string name="btnCosH_Text" >cosh</string>
    <string name="btnTanH_Text" >tanh</string>
    <string name="btnRand_Text" >Rand</string>
    <string name="btn1DivX_Text" >1/&#8339;</string>
    <string name="btnSqrt_Text" >&#178;&#8730;x</string>
    <string name="btn3Root_Text" >&#179;&#8730;x</string>
    <string name="btnYRoot_Text" >&#7518;&#8730;x</string>
    <string name="btnLn_Text" >ln</string>
    <string name="btnLog10_Text" >log&#8321;&#8320;</string>
    <string name="btnFact_Text" >x!</string>
    <string name="btnSin_Text" >sin</string>
    <string name="btnCos_Text" >cos</string>
    <string name="btnTan_Text" >tan</string>
    <string name="btnEuler_Text" >&#8455;</string>
    <string name="btnEE_Text" >EE</string>
    <string name="btnPwdY_Text" >x&#7518;</string>
</resources>